--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <div>
-      <a href="./index.html">Go back</a>
+      <a class="back-btn"  href="./index.html">Go back</a>
     </div>
     <div>
       <ul class="gallery"></ul>
     </div>
+
+    <script src="./js/01-gallery.js" type="module"></script>
   </body>
 </html>
