--- a/src/02-form.html
+++ b/src/02-form.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback form</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <div>
-      <a href="./index.html">Go back</a>
+      <a class="back-btn"  href="./index.html">Go back</a>
     </div>
+
+    <div id="form-container" ></div>
+
+    <script src="./js/02-form.js" type="module"></script>
   </body>
 </html>
