--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <ul>
-      <li><a href="01-gallery.html">Gallery</a></li>
-      <li><a href="02-form.html">Feedback form</a></li>
+      <li><a class="nav" href="./01-gallery.html">Gallery</a></li>
+      <li><a class="nav"  href="./02-form.html">Feedback form</a></li>
     </ul>
   </body>
